--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <title>{{ page.title }} | {{ site.title }}</title>
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ '/assets/css/dark.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ 'jadenmas.github.io/assets/css/dark.css' | relative_url }}">
 </head>
 <body>
   <header>
